添加GitHub Pages配置和更新项目信息

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!-- 
+  电子木鱼网站 (Digital Wooden Fish)
+  GitHub: https://github.com/Xenia-cxm/wooden-fish
+  Author: Xenia-cxm
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
