--- a/index.html
+++ b/index.html
@@ -6,12 +6,25 @@
 -->
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6WWJ58DN3C"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-6WWJ58DN3C');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#6366F1">
     <meta name="description" content="Digital Wooden Fish - Tap the wooden fish to accumulate merit and find digital zen. A relaxing and mindful clicking game inspired by Buddhist traditions.">
     <title>Digital Wooden Fish | Mindful Clicking Game</title>
     <link rel="canonical" href="https://digitalwoodenfish.com" />
+    <!-- 网站图标设置 -->
+    <link rel="icon" href="assets/wooden-fish.png" type="image/png">
+    <link rel="shortcut icon" href="assets/wooden-fish.png" type="image/png">
+    <link rel="apple-touch-icon" href="assets/wooden-fish.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script>
