--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
         </header>
 
         <main class="relative">
-            <section class="bg-white bg-opacity-80 backdrop-blur-sm rounded-2xl shadow-xl p-8 mb-12">
-                <h2 class="text-2xl font-bold text-indigo-700 mb-6 text-center">Tap for Merit</h2>
+            <section class="bg-white bg-opacity-80 backdrop-blur-sm rounded-2xl shadow-xl p-8 mb-12 w-full max-w-3xl mx-auto">
+                <h2 class="text-2xl font-bold text-indigo-700 mb-6 tap-title">敲击获取功德</h2>
                 
                 <div class="flex flex-col items-center">
                     <div id="wooden-fish" class="wooden-fish hover:scale-105 transition-transform duration-300 cursor-pointer mb-6 relative group">
@@ -251,6 +251,24 @@
                 </div>
             </div>
         </main>
+
+        <!-- 自定义心愿对话框 -->
+        <div id="wish-dialog" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+            <div class="bg-white rounded-lg p-6 max-w-md w-full mx-4">
+                <h3 class="text-xl font-bold mb-4 wish-dialog-title">Enter your wish:</h3>
+                <textarea id="wish-input" class="w-full border rounded p-2 mb-4 h-24 resize-none" placeholder="Type your wish here..."></textarea>
+                <div class="flex justify-end space-x-3">
+                    <button id="wish-cancel" class="px-4 py-2 bg-gray-200 rounded hover:bg-gray-300">
+                        <span class="lang-en">Cancel</span>
+                        <span class="lang-zh" style="display:none">取消</span>
+                    </button>
+                    <button id="wish-confirm" class="px-4 py-2 bg-indigo-500 text-white rounded hover:bg-indigo-600">
+                        <span class="lang-en">Confirm</span>
+                        <span class="lang-zh" style="display:none">确定</span>
+                    </button>
+                </div>
+            </div>
+        </div>
 
         <footer class="flex justify-between items-center mt-12 border-t border-indigo-200 pt-6">
             <p class="text-indigo-600">&copy; 2023 Digital Wooden Fish</p>
